...
        tableView.dataSource = self
        tableView.separatorInset = .zero
        tableView.showsVerticalScrollIndicator = false
        tableView.register(ProductViewCell.self, forCellReuseIdentifier: "ProductViewCell")
        tableView.register(ProductDescriptionViewCell.self, forCellReuseIdentifier: "ProductDescriptionViewCell")
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "ProductTableView"
        return tableView
    }()
    
    private let viewModel: ProductViewModelProtocol
    
    // MARK: - Initialization
...
