...
final class CatalogViewModel: CatalogViewModelProtocol {
    
    // MARK: - Properties
    
    private let productRepository: ProductRepositoryProtocol
    
    let navTitle = "Products"
    private let isLoadingSubject = PassthroughSubject<Bool, Never>()
    var isLoading: AnyPublisher<Bool, Never> {
        return isLoadingSubject.eraseToAnyPublisher()
    }
    let products = CurrentValueSubject<[Product], Never>([])
    let onViewReady = PassthroughSubject<Void, Never>()
...
