...

    override func viewDidLoad() {
        super.viewDidLoad()
        title = viewModel.navTitle
        view.backgroundColor = .white
        collectionView.pin(to: view)
        collectionView.accessibilityIdentifier = "CatalogCollectionView"
        placeholderView.delegate = self
        bindViewModel()
        viewModel.onViewReady.send(())
    }
}

...
